粗翻: JEP 122: 删除永久代(Remove the Permanent Generation)